# example-rust-web

./: Cargo.toml  README.md
src/: main.rs
src/api/: ttmp.rs  user.rs
src/common/: mod.rs  pool.rs  variable.rs
src/middleware/: log.rs  mod.rs
src/migration/: mod.rs
src/model/: mod.rs  ttmp.rs  user.rs
src/service/: mod.rs  ttmp.rs
src/test/: user.rs
