[package]
name = "ActixWebAdmin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "^0.4"
actix-web = "^4"
sqlx ={version = "0.7.3",features = ["postgres","runtime-tokio-rustls"]}
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.193", features = ["derive"] }
derive_more = { version = "0.99.1", features = [] }
